[gd_scene load_steps=2 format=3 uid="uid://dihjgf3bt20kw"]

[ext_resource type="Script" path="res://scene/battle_scene/skill_unit.gd" id="1_onkup"]

[node name="SkillUnit" type="PanelContainer"]
custom_minimum_size = Vector2(40, 40)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_onkup")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[node name="UseTime" type="Label" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/font_size = 12
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
